CHANGES IN VERSION 1.41.2
-------------------------
 o performance analytics has new naAs0 argument [2014-07-04 Fri]
 
CHANGES IN VERSION 1.41.1
-------------------------
 o new peformance analytics functions (lgatto) <2013-04-30 Tue>

CHANGES IN VERSION 1.41.0
-------------------------
 o bump for Bioc devel 2.13 

CHANGES IN VERSION 1.40.0
-------------------------
 o bump for Bioc stable 2.12 

CHANGES IN VERSION 1.39.5
-------------------------
 o ksvmI test/trainScores are have now rownames. 
   Resulted in error in predScores. <2013-03-12 Tue>

CHANGES IN VERSION 1.39.4
-------------------------
 o plsda prediction returns prob matrix instead of 
   array of [, , 1] dims (lgatto) <2013-03-09 Sat>

CHANGES IN VERSION 1.39.3
-------------------------
 o fixed predScores (lgatto) <2013-03-01 Fri>

CHANGES IN VERSION 1.39.2
-------------------------
 o macroF1 fix ans with na.rm
 o fixed macro F1 score (lgatto) <2013-01-18 Fri>

CHANGES IN VERSION 1.39.2
-------------------------
 o fixed macro F1 score (lgatto) <2013-01-18 Fri>
>>>>>>> first draft performance analytics

CHANGES IN VERSION 1.39.1
-------------------------
 o not scaling kmeans' partition in partPlot (lgatto) <2012-11-10 Sat>

CHANGES IN VERSION 1.37.1
-------------------------
 o added NEWS file (lgatto) <2012-04-02 Mon>
 o renamed 'predScores' to 'predScore' and 
   new 'predScores' method that returns the full 
   prediction score matrix (lgatto) <2012-04-02 Mon>
 o remove ununsed t argument for predScore (lgatto) <2012-04-02 Mon>
 o changed maxit to maxiter in RAB4es and decr to decreasing 
   in fs.absT (partial argument matching note during checking) 
   (lgatto) <2012-04-02 Mon>
 o fixed predScores <2012-04-03 Tue>
