@@ -9,18 +9,17 @@ Description: Uniform interfaces to machine learning code for data in
         Bioconductor containers
 Maintainer: V. Carey <stvjc@channing.harvard.edu>
 License: LGPL
-Depends: R (>= 2.9), Biobase, MASS, methods, genefilter, rpart, rda,
-        annotate, cluster, sfsmisc
-Suggests: class, e1071, ipred, randomForest, gpls, pamr, rpart, MASS,
+Depends: R (>= 2.9), Biobase, methods, annotate, cluster
+Imports: gdata, pls, sfsmisc, MASS, rpart, rda, genefilter
+Suggests: class, e1071, ipred, randomForest, gpls, pamr,
         nnet, ALL, gbm, mlbench, hgu95av2.db, som, RColorBrewer,
         hu6800.db, lattice, caret (>= 5.07), golubEsets, ada,
-        keggorthology, kernlab, gbm, mboost, sfsmisc, party
-Imports: mboost, gdata, pls
+        keggorthology, kernlab, mboost, party, BiocGenerics
 Enhances: parallel
 LazyLoad: yes
 Collate: AllClasses.R RAB.R pplot.R varImp.R xval.R MLearn.R
         MLIConverters.R MLIPredicters.R localBridge.R
         methods-classifierOutput.R methods-clusteringOutput.R
-        methods-learnerSchema.R schemaInterfaces.R featSel.R partPlot.R
-        clDesign.R plsdaI.R performance-analytics.R
+        methods-learnerSchema.R schemaInterfaces.R featSel.R
+        partPlot.R clDesign.R plsdaI.R performance-analytics.R
 biocViews: Classification, Clustering
