@@ -13,13 +13,17 @@
 }
 
 \usage{
-confuTab(obj)
+confuTab(obj, naAs0 = FALSE)
 }
 
 
 \arguments{
   \item{obj}{
     An instance of class \code{table}. Must be square.
+  }
+  \item{naAs0}{
+    A \code{logical}, defining if \code{NA}s are to be replaced by
+  \code{0}s. 
   }
 }
 
